# parallel-search

./: .gitmodules  README.md
parallel_search/: CMakeLists.txt  main.cpp
parallel_search/include/: example_inputs.h  search_method.h  search_tree.h  test_client.h  test_inputs.h  utils.h
parallel_search/src/: example_inputs.cpp  search_method.cpp  search_tree.cpp  test_client.cpp  test_inputs.cpp  utils.cpp
parallel_search/tests/: CMakeLists.txt  test_fixed_size_input.cpp  test_linear_search_method.cpp  test_random_length_input.cpp  test_tree_search_method.cpp
